--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,12 @@ os: linux
 group: stable
 dist: trusty
 sudo: required
+language: generic
 
 env:
   DOCKER_COMPOSE_VERSION: 1.22.0
 
 before_install:
-  - sudo apt-get update
-  #- sudo apt-get install -o Dpkg::Options::="--force-confold" --force-yes -y docker-engine
-  - docker-compose --version
   - sudo rm /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
@@ -17,6 +15,8 @@ before_install:
   - docker-compose --version
 
 before_script:
+  - docker-compose up -d
+  - sleep 10
   - docker-compose run vtiger composer install --no-interaction --prefer-source --dev
 
 script:
