--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     }
   },
   "require": {
-    "mnapoli/silly": "^1.5"
+    "mnapoli/silly": "^1.5",
+    "javanile/mysql-import": "^0.0.5"
   },
   "require-dev": {
     "phpunit/phpunit": "^5"
