--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
 before_script:
   - docker-compose up -d
   - sleep 10
-  - docker-compose run vtiger composer install --no-interaction --prefer-source --dev
+  - docker-compose run vtiger composer install --no-interaction --prefer-source
 
 script:
   - docker-compose run vtiger vendor/bin/phpunit tests
