--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
   - docker-compose --version
 
 before_script:
-  - docker-compose up -d
+  - docker-compose up -d vtiger
   - docker-compose run vtiger composer install --no-interaction --prefer-source
   - docker-compose run vtiger vendor/bin/mysql-import --do-while --no-file
 
