--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     "psr/container": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5"
+    "phpunit/phpunit": "^5",
+    "kherge/box": "~2.0"
   }
 }
