--- a/composer.json
+++ b/composer.json
@@ -22,14 +22,13 @@
   },
   "require": {
     "ext-json": "*",
-    "mnapoli/silly": "^1.5",
+    "mnapoli/silly": "^1.5"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^5",
     "javanile/http-robot": "*",
     "javanile/mysql-import": "*",
     "javanile/vtiger-client": "*",
     "psr/container": "^1.0"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^5",
-    "kherge/box": "~2.0"
   }
 }
